<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        />
    <TextView
        android:id="@+id/signupTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_below="@id/logoImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:id="@+id/fullnameEditText"
        android:layout_below="@id/signupTextView"
        android:hint="@string/fullname"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_edittext"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:id="@+id/addressEditText"
        android:layout_below="@id/fullnameEditText"
        android:hint="@string/address"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_edittext"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:id="@+id/phoneEditText"
        android:layout_below="@id/addressEditText"
        android:hint="@string/phone"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_edittext"

        />
    <LinearLayout
        android:id="@+id/genderLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/phoneEditText"
        android:layout_marginTop="16dp"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gender"
        android:textSize="16sp"
        android:textColor="@color/black"
        />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:layout_marginRight="2dp"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/others"
                android:layout_marginLeft="2dp"
                />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/countryLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/genderLinearLayout"
        android:orientation="vertical"
        android:layout_marginTop="16dp">
        <TextView
            android:id="@+id/countryEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Country"
            android:textColor="@color/black"
            />
        <Spinner
            android:id="@+id/countrySpinner"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:entries="@array/country"
            />
    </LinearLayout>
    <CheckBox
        android:id="@+id/termandconditionCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Terms and Conditions"
        android:layout_below="@id/countryLinearLayout"
        android:layout_marginTop="16dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signupButton"
        android:layout_below="@id/termandconditionCheckBox"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_button"
        />


</RelativeLayout>